<?xml version="1.0" encoding="utf-8"?>
<!-- 
	Author: Josiah Hadley
	Class: CS211D
	Assignment: HW 4
	File: activity_login.xml
	Purpose: The layout file for the LoginActivity activity
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/unInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/majorMargin"
        android:hint="@string/loginHint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pwInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/unInput"
        android:layout_below="@+id/unInput"
        android:layout_marginTop="@dimen/mediumMargin"
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/unInput"
        android:layout_below="@+id/pwInput"
        android:layout_marginTop="@dimen/mediumMargin"
        android:text="@string/login" />

    <Button
        android:id="@+id/quitLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login"
        android:layout_alignBottom="@+id/login"
        android:layout_alignLeft="@+id/pwInput"
        android:text="@string/quit" />

</RelativeLayout>